# poregpt

./: .gitignore  README.md  pyproject.toml
poregpt/workflows/: README.md  pyproject.toml
poregpt/workflows/kms_workflow/step03_tokenize_basecall_corpus/: run_batch.sh
poregpt/workflows/nanopore_llm_workflow/cli/: __init__.py  step02_memmap_chunks.py  step02_split_chunks.py  step05_plot_train_loss.py
poregpt/workflows/nanopore_llm_workflow/cli/fast5/: fast5_to_chunks.py
poregpt/workflows/nanopore_llm_workflow/scripts/vqe_workflow/: fast5_to_chank.py  fast5_to_chank.sh  step00_train_cnn_model.sh  step02_train_vqe_model.sh  step03_cluster_memap.py  step03_cluster_shards.sh  step03_select_memap.sh  step03_tokenize_fast5.sh  step03_tokenize_fast5dir.sh  test.py  (+3 more)
poregpt/workflows/vqe_workflow/: a.sh  delete.py  step00_fast5_to_chunks.sh  step02_eval_cnn_model.sh  step02_memmap_chunks.sh  step03_cluster_memap.sh  step03_cluster_shards.py  step03_select_memap.py  step03_tokenize_fast5dir.sh  step04_split_jsonlgz.sh  step04_trank_to_jsonlgz.sh  step06_plot_token_dist.sh
poregpt/workflows/vqe_workflow/scripts/: step00_fast5_to_chunks.py  step02_train_cnn_model.py  step02_train_vq_model.py
poregpt/workflows/vqe_workflow/step00_train_cnn_model/: config_train_cnn0.yaml  config_train_cnn3.yaml  config_train_cnn4.yaml  config_train_cnn5.yaml  run.sh  train_loss.csv
poregpt/workflows/vqe_workflow/step02_train_vqe_model/: config_c64k_scratch.yaml  run.sh
poregpt/workflows/vqe_workflow/step03_tokenize_basecall_corpus/: run_batch.sh
poregpt/workflows/workflows/: __init__.py
poregpt/workflows/workflows/cli/: step02_train_vq_model.py  step03_vq0_tokenize_fast5.py  step04_split_jsonlgz.py  step06_plot_token_dist.py
(+253 files in other folders)
